--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .wrapper {
@@ -87,7 +89,7 @@ body {
 /* end fonts */
 
 * {
-    font-family: Roboto-Light_1;
+    font-family: Roboto-Light_1, Arial, Helvetica, sans-serif;
 }
 
 a {
