--- a/css/main.css
+++ b/css/main.css
@@ -5,522 +5,8 @@
 **
 ****************************/
 
-/* start fonts */
-
-@font-face {
-    font-family: 'robotolight';
-    src: url('../css/fonts/roboto-light_1-webfont.woff2') format('woff2'), url('../css/fonts/roboto-light_1-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'robotolight_italic';
-    src: url('../css/fonts/roboto-lightitalic_1-webfont.woff2') format('woff2'), url('../css/fonts/roboto-lightitalic_1-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'robotobold';
-    src: url('../css/fonts/roboto-bold_1-webfont.woff2') format('woff2'), url('../css/fonts/roboto-bold_1-webfont.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-* {
-    font-family: 'robotolight', Arial, Helvetica, sans-serif;
-}
-
-/* end fonts */
-
-/* start big blocks */
-
-html,
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.wrapper {
-    width: 100%;
-}
-
-.container {
-    width: 1100px;
-    margin: 0 auto;
-}
-
-.header {
-    min-height: 75px;
-    width: 100%;
-    background: #4b73b5;
-}
-
-.maincontent {
-    height: 100%;
-    margin-top: 12px;
-}
-
-.maincontent__aside {
-    width: 200px;
-    float: left;
-}
-
-.maincontent__container {
-    width: 900px;
-    float: right;
-    vertical-align: top;
-    text-align: top;
-    margin-bottom: 65px;
-}
-
-.maincontent__sidebar {
-    text-align: left;
-}
-
-.footer {
-    clear: both;
-    min-height: 75px;
-    width: 100%;
-    background: #4b73b5;
-}
-
-/* end big blocks */
-
-
-a {
-    text-decoration: none;
-}
-
-/* start header */
-
-.container>.logotype {
-    float: left;
-    margin-left: 20px;
-    padding-top: 20px;
-}
-
-.container>.headerinfo {
-    float: right;
-    margin-right: 20px;
-    padding-top: 15px;
-}
-
-.phone {
-    font-family: 'robotobold';
-    color: #ffffff;
-    font-size: 22px;
-    font-weight: 500;
-    text-align: right;
-}
-
-.schedule__button {
-    background-color: transparent;
-    border: none;
-    color: #ffffff;
-    /* font-family: 'robotolight'; */
-    font-size: 14px;
-    font-weight: 500;
-    padding-left: 70px;
-    padding-right: 0;
-    text-decoration: underline;
-}
-
-/* end header */
-
-/* start aside*/
-
-.menu {
-    margin-left: 0px;
-}
-
-.menu__list {
-    list-style: none;
-    padding-left: 20px;
-    margin-top: 35px;
-}
-
-.menu__item {
-    vertical-align: top;
-    overflow: auto;
-    margin-top: 26px;
-    margin-left: 0px;
-}
-
-.menu__icon {
-    background-repeat: no-repeat;
-    width: 17pt;
-    height: 17pt;
-    float: left;
-    margin-left: 0px;
-}
-
-.menu__text {
-    /* font-family: 'robotobold'; !important; */
-    letter-spacing: 3px;
-    color: #4b73b5;
-    font-size: 11px;
-    font-weight: 700;
-    line-height: 20px;
-    margin-left: 35px;
-}
-
-a:hover>.menu__text {
-    color: #000000;
-}
-
-.icon-main {
-    background-image: url('../img/sidebar-icons/main_icon.png');
-}
-
-a:hover>.icon-main {
-    background-image: url('../img/sidebar-icons/main_icon-black.png');
-}
-
-.icon-comments {
-    background-image: url('../img/sidebar-icons/feed_icon.png');
-}
-
-a:hover>.icon-comments {
-    background-image: url('../img/sidebar-icons/feed_icon-black.png');
-}
-
-.icon-crew {
-    background-image: url('../img/sidebar-icons/team_icon.png');
-}
-
-a:hover>.icon-crew {
-    background-image: url('../img/sidebar-icons/team_icon-black.png');
-}
-
-/* end aside */
-
-/* start tariffs */
-
-.big-photo {
-    margin: 0px;
-    padding: 0px;
-}
-
-.tariffs {
-    margin: 0px;
-    padding-right: 0px;
-    text-align: top;
-}
-
-.title__h {
-    /* font-family: 'robotobold'; */
-    color: #221f1f;
-    font-size: 45px;
-    font-style: bold;
-    margin: 0px;
-    padding: 0px;
-}
-
-.tariffs__elements {
-    list-style: none;
-    display: inline-block;
-    margin-top: 23px;
-    padding: 0px;
-}
-
-.tariffs__element-icon {
-    width: 250px;
-    margin-right: 6px;
-    margin-left: 6px;
-}
-
-.tariffs__element {
-    display: inline-block;
-    text-align: center;
-}
-
-.tariffs__element-icon-all {
-    margin-top: 40px;
-    border-radius: 50%;
-    width: 50pt;
-    height: 50pt;
-    display: inline-block;
-}
-
-.icon-standart {
-    background: #4b73b5;
-    background-image: url('../img/tariffs-icon/flower.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.icon-premium {
-    background: #4b73b5;
-    background-image: url('../img/tariffs-icon/star.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.icon-laksheri {
-    background: #4b73b5;
-    background-image: url('../img/tariffs-icon/palette.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.tariffs__element-items {
-    text-align: left;
-}
-
-.tariffs__element-name {
-    color: #212121;
-    /* font-family: 'robotobold'; */
-    /* letter-spacing: 1px;
-    font-weight: 00; */
-    text-align: center;
-    font-size: 12px;
-    padding-top: 18px;
-}
-
-.tariffs__element-description,
-.tariffs__element-items {
-    color: #221f1f;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 33px;
-    /* padding-top: 3px; */
-}
-
-.tariffs__element-item {
-    padding-top: 5px;
-}
-
-.tariffs__element-price {
-    color: #212121;
-    font-size: 54px;
-    font-weight: bold;
-    line-height: 57px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.dollar {
-    color: #212121;
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 57px;
-}
-
-/* end tarifs */
-
-/* start news */
-
-.news {
-    margin-top: 65px;
-    margin-bottom: 15px;
-}
-
-.news__elements {
-    list-style: none;
-    display: inline-block;
-    padding-left: 0px;
-    margin-top: 30px;
-}
-
-.news__element {
-    clear: both;
-    padding-top: 30px;
-    padding-bottom: 0px;
-    border-bottom: 1px solid #cccccc;
-}
-
-.news__element-picture {
-    float: left;
-}
-
-.news__element-description {
-    margin-left: 175px;
-}
-
-.news__element-date {
-    font-size: 14px;
-    padding-top: 0px;
-    margin-top: 0px;
-}
-
-.news__element-header {
-    padding-top: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.news__element-text {
-    font-size: 18px;
-    line-height: 1.7;
-    padding-top: 10px;
-    margin-top: 0px;
-    padding-bottom: 0px;
-    width: 650px;
-}
-
-/* end news */
-
-/* start pagination */
-
-.pagination {
-    display: inline;
-}
-
-.pagination__display {
-    display: inline;
-    margin-left: 270px;
-    font-size: 14px;
-    margin-right: 0px;
-}
-
-.pagination__elements {
-    list-style: none;
-    display: inline;
-    font-weight: bold;
-    font-size: 14px;
-    margin-left: 5px;
-    padding-left: 0px;
-}
-
-.pagination__element {
-    display: inline-block;
-    padding-left: 4px;
-}
-
-.pagination__element-wrap {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    padding: 3px;
-    text-align: center;
-    border-radius: 10%;
-    color: #000000;
-}
-
-a:hover>.pagination__element-wrap {
-    background: #4b73b5;
-    color: #ffffff;
-}
-
-/* end pagination */
-
-/* start footer */
-
-.footer__signature {
-    float: left;
-    width: 234px;
-    height: 50px;
-    margin-top: 5px;
-    font-family: 'robotolight';
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 18px;
-    text-align: left;
-    margin-left: 15px;
-}
-
-.bold {
-    font-family: 'robotobold';
-}
-
-.footer>.container>.logotype {
-    display: inline;
-    margin-left: 245px;
-}
-
-.logotype__link {
-    margin: 0px;
-    padding: 0px;
-}
-
-.footer__social {
-    float: right;
-    /* display: inline-block; */
-}
-
-.footer__social-text {
-    font-family: 'robotolight';
-    color: #ffffff;
-    font-size: 14px;
-    margin-top: 10px;
-    margin-right: 25px;
-}
-
-.footer__social-pictures {
-    margin-top: 10px;
-}
-
-.social-pictures-list {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-.social-pictures-item {
-    display: inline-block;
-    margin-right: 5px;
-}
-
-.social-picture-icon {
-    background: #d2def3;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}
-
-a:hover>.social-picture-icon {
-    background: #fff;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.vk {
-    background-image: url('../img/social-icon/vk.png');
-}
-
-a:hover>.vk {
-    background-image: url('../img/social-icon/vk.png');
-}
-
-.fb {
-    background-image: url('../img/social-icon/fb.png');
-}
-
-a:hover>.fb {
-    background-image: url('../img/social-icon/fb.png');
-}
-
-.google {
-    background-image: url('../img/social-icon/google.png');
-}
-
-a:hover>.google {
-    background-image: url('../img/social-icon/google.png');
-}
-
-.twitter {
-    background-image: url('../img/social-icon/twitter.png');
-}
-
-a:hover>.twitter {
-    background-image: url('../img/social-icon/twitter.png');
-}
-
-.mail {
-    background-image: url('../img/social-icon/mail.png');
-}
-
-a:hover>.mail {
-    background-image: url('../img/social-icon/mail.png');
-}
-
-/* end footer */
+@import url('../css/layout/fonts.css');
+@import url('../css/layout/normalize.css');
+@import url('../css/layout/base.css');
+
+@import url('../css/blocks/header.css');
