--- a/css/blocks/footer-social.css
+++ b/css/blocks/footer-social.css
@@ -5,22 +5,22 @@
 **
 ****************************/
 
-.footer__social-pictures {
+.footer__social {
     margin-top: 10px;
 }
 
-.social-pictures-list {
+.social-list {
     list-style: none;
     margin: 0px;
     padding: 0px;
 }
 
-.social-pictures-item {
+.social-item {
     display: inline-block;
     margin-right: 5px;
 }
 
-.social-picture-icon {
+.social-icon {
     background: #d2def3;
     background-repeat: no-repeat;
     background-position: center center;
@@ -29,48 +29,48 @@
     border-radius: 50%;
 }
 
-a:hover>.social-picture-icon {
+a:hover>.social-icon {
     background: #fff;
     background-repeat: no-repeat;
     background-position: center center;
 }
 
-.vk {
-    background-image: url('../img/social-icon/vk.png');
+.social-icon--vk {
+    background-image: url('../../img/social-icon/vk.png');
 }
 
-a:hover>.vk {
-    background-image: url('../img/social-icon/vk.png');
+a:hover>.social-icon--vk {
+    background-image: url('../../img/social-icon/vk.png');
 }
 
-.fb {
-    background-image: url('../img/social-icon/fb.png');
+.social-icon--fb {
+    background-image: url('../../img/social-icon/fb.png');
 }
 
-a:hover>.fb {
-    background-image: url('../img/social-icon/fb.png');
+a:hover>.social-icon--fb {
+    background-image: url('../../img/social-icon/fb.png');
 }
 
-.google {
-    background-image: url('../img/social-icon/google.png');
+.social-icon--google {
+    background-image: url('../../img/social-icon/google.png');
 }
 
-a:hover>.google {
-    background-image: url('../img/social-icon/google.png');
+a:hover>.social-icon--google {
+    background-image: url('../../img/social-icon/google.png');
 }
 
-.twitter {
-    background-image: url('../img/social-icon/twitter.png');
+.social-icon--twitter {
+    background-image: url('../../img/social-icon/twitter.png');
 }
 
-a:hover>.twitter {
-    background-image: url('../img/social-icon/twitter.png');
+a:hover>.social-icon--twitter {
+    background-image: url('../../img/social-icon/twitter.png');
 }
 
-.mail {
-    background-image: url('../img/social-icon/mail.png');
+.social-icon--mail {
+    background-image: url('../../img/social-icon/mail.png');
 }
 
-a:hover>.mail {
-    background-image: url('../img/social-icon/mail.png');
+a:hover>.social-icon--mail {
+    background-image: url('../../img/social-icon/mail.png');
 }
