--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -8,15 +8,16 @@
 .header {
     width: 100%;
     background: #4b73b5;
+    margin-bottom: 13px; 
 }
 
-.header__container {
+.header--container {
     min-height: 77px;
     display: flex;
     align-items: center;
 }
 
-.logo {
+.header__logo {
     padding-top: 10px;
     padding-left: 20px;
 }
