--- a/css/blocks/maincontent.css
+++ b/css/blocks/maincontent.css
@@ -5,24 +5,17 @@
 **
 ****************************/
 
-.maincontent {}
-
 .maincontent__container {
     display: flex;
     min-height: 200px;
-    /* align-items: stretch; */
-    /* border: 1px solid #000000; */
 }
 
-.maincontent__aside {
+.aside {
     width: 200px;
     padding-left: 20px;
-    /* border: 1px solid #000000; */
 }
 
-.maincontent__main {
+.main {
     width: 900px;
     padding-right: 20px;
-    /* border: 1px solid #000000; */
-
 }
