--- a/css/blocks/news.css
+++ b/css/blocks/news.css
@@ -5,31 +5,30 @@
 **
 ****************************/
 
-.title-news {
-margin-bottom: 63px;
+.title-h--news {
+    margin-bottom: 63px;
 }
 
 .news__list {
     display: flex;
     flex-direction: column;
     width: 810px;
+    padding-bottom: 8px;
 }
 
 .news__item {
     display: flex;
     align-items: flex-start;
-    border: 1px solid #000000;
     padding-bottom: 30px;
 }
 
 .news__item-description {
     margin-left: 18px;
-   
 }
 
 .news__item-date {
     font-size: 13px;
-     margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .news__item-header {
