--- a/css/blocks/tariffs.css
+++ b/css/blocks/tariffs.css
@@ -5,26 +5,26 @@
 **
 ****************************/
 
-.big-central-photo {
+.big-photo__img {
     margin-bottom: 6px;
 }
 
 .tariffs {
     margin: 0px;
     padding: 0px;
+    padding-bottom: 90px;
     text-align: top;
     display: flex;
     flex-direction: column;
 }
 
-.title__h {
+.title-h {
     color: #221f1f;
     font-size: 45px;
     /* font-style: normal; */
     font-weight: 600;
     margin: 0px;
     padding: 0px;
-    border: 1px solid #ccc;
 }
 
 .tariffs__list {
@@ -32,7 +32,6 @@
     list-style: none;
     display: flex;
     width: 790px;
-    border: 1px solid rgb(221, 10, 10);
 }
 
 .tariffs__item {
@@ -44,7 +43,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #000;
 }
 
 .tariffs__item-icon {
@@ -62,7 +60,7 @@
 }
 
 .icon-premium {
-   background-image: url('../../img/tariffs-icon/star.png');
+    background-image: url('../../img/tariffs-icon/star.png');
 }
 
 .icon-laksheri {
@@ -74,6 +72,7 @@
     text-align: center;
     font-size: 12px;
     padding-top: 18px;
+    margin-bottom: 5px;
 }
 
 .tariffs__item-description {
@@ -82,7 +81,7 @@
     font-weight: 200;
     line-height: 33px;
     text-align: center;
-padding-top: 12px;
+    padding-top: 12px;
 }
 
 .tariffs__item-list {
@@ -90,7 +89,6 @@ padding-top: 12px;
     font-size: 18px;
     font-weight: 300;
     line-height: 33px;
-    
 }
 
 .tariffs__item-list-elem {
