--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -26,8 +26,9 @@ body {
 }
 
 .container {
-    width: 110px;
+    width: 1100px;
     margin: 0 auto;
+    
 }
 
 * {
@@ -47,4 +48,19 @@ button {
     border: none;
     background: transparent;
     cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0px;
+    font-style: normal;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0px;
 }
