rename modificators in header, footer, maincontent (index.html, comments.html, team.html)

--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -10,7 +10,7 @@
     background: #4b73b5;
 }
 
-.footer--container {
+.container--footer {
     min-height: 77px;
     display: flex;
     align-items: center;
