--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -11,7 +11,7 @@
     margin-bottom: 13px; 
 }
 
-.header--container {
+.container--header {
     min-height: 77px;
     display: flex;
     align-items: center;
