--- a/css/main.css
+++ b/css/main.css
@@ -19,5 +19,6 @@
 @import url('../css/blocks/info.css');
 @import url('../css/blocks/new-comment.css');
 @import url('../css/blocks/team.css');
+@import url('../css/blocks/partners.css');
 @import url('../css/blocks/footer.css');
 @import url('../css/blocks/footer-social.css');
