--- a/css/blocks/info.css
+++ b/css/blocks/info.css
@@ -11,6 +11,8 @@
     color: #fff;
     line-height: 1.5;
     font-size: 18px;
+    background-image: url('../../img/comments-avatars/pattern.png');
+    background-position: center center;
 }
 
 .container--info {
