--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -18,19 +18,26 @@
 }
 
 .footer__left {
-width: 244px;
-height: 50px;
-margin-top: 5px;
-color: #ffffff;
-font-size: 14px;
-font-weight: 300;
-line-height: 18px;
-text-align: left;
-margin-left: 15px;
+    width: 244px;
+    height: 50px;
+    margin-top: 5px;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    text-align: left;
+    margin-left: 15px;
 }
 
 .bold {
     font-weight: 600;
+}
+
+.footer__left-link {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 300;
+    text-decoration: none;
 }
 
 .footer__right-text {
