--- a/css/blocks/comments.css
+++ b/css/blocks/comments.css
@@ -37,37 +37,7 @@
     line-height: 1.5;
 }
 
-/* 
-
-.comments__list {
-    display: flex;
-    flex-direction: column;
-    width: 810px;
-    padding-bottom: 8px;
-    margin-top: 25px;
+.comments__item-img {
+    display: block;
+    height: 100%;
 }
-
-.comments__item {
-    display: flex;
-    align-items: flex-start;
-    padding-bottom: 30px;
-}
-
-.comments__item-description {
-    margin-left: 18px;
-}
-
-.comments__item-date {
-    font-size: 13px;
-    margin-bottom: 50px;
-}
-
-.comments__item-header {
-    font-size: 20px;
-}
-
-.comments__item-text {
-    font-size: 20px;
-    font-style: normal;
-    line-height: 1.1;
-} */
