--- a/css/blocks/new-comment.css
+++ b/css/blocks/new-comment.css
@@ -32,7 +32,7 @@
 .new-comment__form-column-top {
     display: flex;
     margin-top: 2px;
-    }
+}
 
 .new-comment__text {
     height: 50px;
@@ -62,18 +62,25 @@
 }
 
 .new-comment__form-column-center {
-    margin-top: 30px;
-
+    margin-top: 10px;
 }
 
 .new-comment__form-column-bottom {
-    margin-top: 5px;
+    /* margin-top: 5px; */
     display: flex;
+    align-items: center;
 }
 
 .new-comment__form-column-bottom-right {
     margin-left: auto;
     width: 150px;
+}
+
+.new-comment__text,
+.new-comment__link,
+.new-comment__textarea,
+.new-comment__button-label {
+    margin-top: 10px;
 }
 
 .new-comment__textarea {
@@ -115,11 +122,12 @@
     background: #ffffff;
     color: #4b73b5;
 }
+
 .new-comment__form-button:hover>.new-comment__form-button-icon {
     height: 20px;
     width: 20px;
     margin-left: 10px;
-    background-image: url('../../img/sidebar-icons/main_icon-black.png');  
+    background-image: url('../../img/sidebar-icons/main_icon-black.png');
     background-repeat: no-repeat;
     background-position: center center;
 }
