--- a/css/blocks/team.css
+++ b/css/blocks/team.css
@@ -69,10 +69,14 @@
 
 .team__person-img-content {
     opacity: 0.45;
+    display: block;
+    height: 100%;
 }
 
 .team__person-img-content:hover {
     opacity: 1;
+    display: block;
+    height: 100%;
 }
 
 .team__person-img:hover>.team__person-img-title {
