--- a/css/blocks/footer-social.css
+++ b/css/blocks/footer-social.css
@@ -5,22 +5,22 @@
 **
 ****************************/
 
-.footer__social {
+.social {
     margin-top: 10px;
 }
 
-.social-list {
+.social__list {
     list-style: none;
     margin: 0px;
     padding: 0px;
 }
 
-.social-item {
+.social__item {
     display: inline-block;
     margin-right: 5px;
 }
 
-.social-icon {
+.social__icon {
     background: #d2def3;
     background-repeat: no-repeat;
     background-position: center center;
@@ -29,48 +29,48 @@
     border-radius: 50%;
 }
 
-a:hover>.social-icon {
+a:hover>.social__icon {
     background: #fff;
     background-repeat: no-repeat;
     background-position: center center;
 }
 
-.social-icon--vk {
+.social__icon--vk {
     background-image: url('../../img/social-icon/vk.png');
 }
 
-a:hover>.social-icon--vk {
+a:hover>.social__icon--vk {
     background-image: url('../../img/social-icon/vk.png');
 }
 
-.social-icon--fb {
+.social__icon--fb {
     background-image: url('../../img/social-icon/fb.png');
 }
 
-a:hover>.social-icon--fb {
+a:hover>.social__icon--fb {
     background-image: url('../../img/social-icon/fb.png');
 }
 
-.social-icon--google {
+.social__icon--google {
     background-image: url('../../img/social-icon/google.png');
 }
 
-a:hover>.social-icon--google {
+a:hover>.social__icon--google {
     background-image: url('../../img/social-icon/google.png');
 }
 
-.social-icon--twitter {
+.social__icon--twitter {
     background-image: url('../../img/social-icon/twitter.png');
 }
 
-a:hover>.social-icon--twitter {
+a:hover>.social__icon--twitter {
     background-image: url('../../img/social-icon/twitter.png');
 }
 
-.social-icon--mail {
+.social__icon--mail {
     background-image: url('../../img/social-icon/mail.png');
 }
 
-a:hover>.social-icon--mail {
+a:hover>.social__icon--mail {
     background-image: url('../../img/social-icon/mail.png');
 }
