--- a/css/blocks/new-comment.css
+++ b/css/blocks/new-comment.css
@@ -38,12 +38,14 @@
     height: 50px;
     width: 270px;
     padding: 8px;
+    border: none;
 }
 
 .new-comment__link {
     height: 50px;
     width: 270px;
     padding: 5px;
+    border: none;
 }
 
 .new-comment__form-column-top--right {
