delete div + div | add flex-wrap (team.html)

--- a/css/blocks/team.css
+++ b/css/blocks/team.css
@@ -12,13 +12,14 @@
 }
 
 .team--bottom {
-    margin-top: 0px; 
+    margin-top: 0px;
 }
 
 .team__list {
     list-style: none;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .team__person {
