--- a/css/blocks/new-comment.css
+++ b/css/blocks/new-comment.css
@@ -98,7 +98,7 @@
     width: 150px;
     color: #ffffff;
     background: #4b73b5;
-    border-radius: 5%;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
 }
