--- a/css/blocks/index.css
+++ b/css/blocks/index.css
@@ -5,17 +5,24 @@
 **
 ****************************/
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper-index {
-    width: 1100px;
-    margin: 0 auto;
+    margin: 0; 
+    height: 100%; 
+    background-image: url('../../img/index/kzhhnb6xsqi-margo-brodowicz.png');
+    background-size: cover;
+
+
 }
 
 .container-index {
-    background-image: url('../../img/index/kzhhnb6xsqi-margo-brodowicz.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 1100px;
-    height: 650px;
+    width: 100%;
+    height: 100%;
 }
 
 .in-block {
