--- a/css/blocks/tariffs.css
+++ b/css/blocks/tariffs.css
@@ -21,28 +21,34 @@
 .title-h {
     color: #221f1f;
     font-size: 45px;
-    /* font-style: normal; */
     font-weight: 600;
     margin: 0px;
     padding: 0px;
 }
-
+.title-h--tariffs {
+    font-size: 18px; 
+    text-transform: uppercase;
+    padding-top: 10px;
+}
 .tariffs__list {
     justify-content: space-between;
     list-style: none;
     display: flex;
-    width: 790px;
+     
+    
 }
 
 .tariffs__item {
-    padding-top: 70px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     margin: 0px;
-    width: 250px;
+    width: 280px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid #cccccc;
+
 }
 
 .tariffs__item-icon {
