--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 @import url('../css/blocks/header.css');
 @import url('../css/blocks/maincontent.css');
 @import url('../css/blocks/maincontent-aside.css');
+@import url('../css/blocks/navigation.css');
 @import url('../css/blocks/tariffs.css');
 @import url('../css/blocks/news.css');
 @import url('../css/blocks/pagination.css');
