--- a/css/blocks/maincontent-aside.css
+++ b/css/blocks/maincontent-aside.css
@@ -15,4 +15,8 @@
 .aside {
     width: 350px;
     padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: flex-start; */
 }
