--- a/css/blocks/tariffs.css
+++ b/css/blocks/tariffs.css
@@ -12,10 +12,11 @@
 .tariffs {
     margin: 0px;
     padding: 0px;
-    padding-bottom: 90px;
+    /* padding-bottom: 90px; */
     text-align: top;
     display: flex;
     flex-direction: column;
+    /* border: 1px solid #000000; */
 }
 
 .title-h {
