--- a/css/main.css
+++ b/css/main.css
@@ -23,4 +23,4 @@
 @import url('../css/blocks/team.css');
 @import url('../css/blocks/partners.css');
 @import url('../css/blocks/footer.css');
-@import url('../css/blocks/footer-social.css');
+@import url('../css/blocks/social.css');
