--- a/css/blocks/news.css
+++ b/css/blocks/news.css
@@ -6,24 +6,29 @@
 ****************************/
 
 .title-h--news {
-    margin-bottom: 63px;
+    margin-bottom: 50px;
 }
 
 .news__list {
     display: flex;
-    flex-direction: column;
-    width: 810px;
-    padding-bottom: 8px;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    width: 850px;
+    /* padding-bottom: 8px; */
 }
 
 .news__item {
     display: flex;
-    align-items: flex-start;
-    padding-bottom: 30px;
+    flex-direction: column; 
+    /* align-items: flex-start; */
+    align-items: center;
+    /* padding-bottom: 10px; */
+    width: 250px;
 }
 
 .news__item-description {
-    margin-left: 18px;
+    /* margin-left: 18px; */
+    padding-top: 35px;
 }
 
 .news__item-date {
@@ -32,11 +37,11 @@
 }
 
 .news__item-header {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .news__item-text {
-    font-size: 20px;
+    font-size: 14px;
     font-style: normal;
-    line-height: 1.1;
+    line-height: 1.5;
 }
