--- a/css/blocks/new-comment.css
+++ b/css/blocks/new-comment.css
@@ -133,3 +133,41 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+.radio {
+	display: none;
+}
+.radio-custom {
+	width: 20px;
+	height: 20px;
+	border: 1px solid #4b73b5;
+	border-radius: 3px;
+	position: relative;
+}
+
+.radio-custom,
+.label {
+	display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.radio:checked + .radio-custom::before {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	bottom: 5px;
+	left: 5px;
+	background: #4b73b5;
+	border-radius: 1px;
+}
+.radio-custom,
+.radio:checked + .radio-custom::before {
+	border-radius: 50%;
+}
+
+.radio:checked>.label {
+    color: #4b73b5;
+}
