--- a/css/blocks/index.css
+++ b/css/blocks/index.css
@@ -69,11 +69,11 @@ body {
     height: 50px;
     width: 200px;
     color: #4b73b5;
-    /* background: #4b73b5; */
     border-radius: 5px;
     border: 1px solid #4b73b5;
     display: flex;
     justify-content: center;
+    text-decoration: none;
 }
 
 .form-button-text {
@@ -82,6 +82,7 @@ body {
     font-weight: 700;
     line-height: 20px;
     text-transform: uppercase;
+    margin-top: 14px;
 }
 
 .form-button-icon {
@@ -91,6 +92,7 @@ body {
     background-image: url('../../img/sidebar-icons/main_icon.png');
     background-repeat: no-repeat;
     background-position: center center;
+    margin-top: 14px;
 }
 
 .form-button:hover {
