modify new comment block

--- a/css/blocks/comments.css
+++ b/css/blocks/comments.css
@@ -4,6 +4,9 @@
 ** AntonVoronezh
 **
 ****************************/
+.title-h--comments {
+    margin-top: 10px;
+}
 
 .comments__list {
     display: flex;
