--- a/css/blocks/new-comment.css
+++ b/css/blocks/new-comment.css
@@ -6,12 +6,13 @@
 ****************************/
 
 .container--new-comment {
-    align-content: center;
-    margin: 0 auto;
+    align-content: right;
+    /* margin: 0 auto; */
     border: 1px solid #f5f5f5;
     background: #f5f5f5;
     width: 700px;
-    margin-top: 50px;
+    margin-top: 10px;
+    margin-left: 420px;
     margin-bottom: 50px;
 }
 
@@ -135,37 +136,39 @@
 }
 
 .radio {
-	display: none;
+    display: none;
 }
+
 .radio-custom {
-	width: 20px;
-	height: 20px;
-	border: 1px solid #4b73b5;
-	border-radius: 3px;
-	position: relative;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #4b73b5;
+    border-radius: 3px;
+    position: relative;
 }
 
 .radio-custom,
 .label {
-	display: inline-block;
+    display: inline-block;
     vertical-align: middle;
     margin-right: 10px;
 }
 
-.radio:checked + .radio-custom::before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 5px;
-	right: 5px;
-	bottom: 5px;
-	left: 5px;
-	background: #4b73b5;
-	border-radius: 1px;
+.radio:checked+.radio-custom::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    bottom: 5px;
+    left: 5px;
+    background: #4b73b5;
+    border-radius: 1px;
 }
+
 .radio-custom,
-.radio:checked + .radio-custom::before {
-	border-radius: 50%;
+.radio:checked+.radio-custom::before {
+    border-radius: 50%;
 }
 
 .radio:checked>.label {
