--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 @import url('../css/blocks/index.css');
 @import url('../css/blocks/header.css');
 @import url('../css/blocks/maincontent.css');
-@import url('../css/blocks/maincontent-aside.css');
+@import url('../css/blocks/aside.css');
 @import url('../css/blocks/navigation.css');
 @import url('../css/blocks/tariffs.css');
 @import url('../css/blocks/news.css');
