--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -6,30 +6,43 @@
 ****************************/
 
 .partners {
-   margin-top: 5px;
-   margin-bottom: 90px;
-}
-
-.partners__list {
-     margin-top: 40px;
-    list-style: none;
+    border: 1px solid #cccccc;
+    width: 280px;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
 }
 
-.partners__list--bottom {
-    margin-top: 65px;
+.title-h--partners {
+    margin-top: 25px;
+    font-size: 18px;
+    text-transform: uppercase;
 }
 
-.partners__item {
-    width: 130px;
+.partners__list {
+    margin-top: 30px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .partners__img {
-    filter: grayscale(100%); 
+    filter: grayscale(100%);
 }
 
 .partners__img:hover {
-    filter: grayscale(0%); 
+    filter: grayscale(0%);
+}
+
+.partners__img {
+    display: block;
+    height: 50px;
+    margin-bottom: 55px;
+}
+
+.partners__img--bmp {
+    width: 80%;
+    height: 80%;
 }
