--- a/css/blocks/navigation.css
+++ b/css/blocks/navigation.css
@@ -57,7 +57,7 @@ a:hover>.sprite-main_icon {
     background-position: -220px -10px;
 }
 
-a:hover>.sprite-feed_icon {
+a:hover>.sprite-feed_icon{
     background-image: url('../../img/social-icon/spritesheet.png');
     background-repeat: no-repeat;
     display: block;
@@ -77,11 +77,16 @@ a:hover>.sprite-team_icon {
 
 /* active */
 
-.navigation__item--active>.navigation__link>.navigation__text {
+.navigation__item--active {
+display: flex;
+align-items: flex-start;
+}
+
+.navigation__item--active>.navigation__text {
     color: #000000;
 }
 
-.navigation__item--active>.navigation__link>.sprite-main_icon {
+.navigation__item--active>.sprite-main_icon {
     background-image: url('../../img/social-icon/spritesheet.png');
     background-repeat: no-repeat;
     display: block;
@@ -90,7 +95,7 @@ a:hover>.sprite-team_icon {
     background-position: -220px -10px;
 }
 
-.navigation__item--active>.navigation__link>.sprite-feed_icon {
+.navigation__item--active>.sprite-feed_icon {
     background-image: url('../../img/social-icon/spritesheet.png');
     background-repeat: no-repeat;
     display: block;
@@ -99,7 +104,7 @@ a:hover>.sprite-team_icon {
     background-position: -76px -10px;
 }
 
-.navigation__item--active>.navigation__link>.sprite-team_icon {
+.navigation__item--active>.sprite-team_icon {
     background-image: url('../../img/social-icon/spritesheet.png');
     background-repeat: no-repeat;
     display: block;
